# contact-implicit-mpc

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  basic_example.cpp
apps/examples/: basic_example.cpp  basic_robot.urdf
apps/examples/arm_models/: connector.urdf  fr3_algr.srdf  fr3_algr.urdf  full_from_xacro_fr3.urdf
apps/examples/mini_cheetah_old/: mini_cheetah_mesh.urdf
ci_mpc/: CMakeLists.txt
ci_mpc/include/: Controller.h  PIDController.h  SystemModel.h
ci_mpc/include/integration/: Integrator.h  SymplecticEuler.h
ci_mpc/src/: Controller.cpp  PIDController.cpp  SystemModel.cpp
ci_mpc/src/integration/: Integrator.cpp  SymplecticEuler.cpp
include/: Controller.h  PIDController.h  SystemModel.h
include/integration/: Integrator.h  SymplecticEuler.h
simulation/: CMakeLists.txt
simulation/include/: Simulator.h
simulation/src/: Simulator.cpp
src/: CMakeLists.txt  Controller.cpp  PIDController.cpp  SystemModel.cpp
src/integration/: Integrator.cpp  SymplecticEuler.cpp
tests/: CMakeLists.txt  test1.cpp
